[package]
name = "syn_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1.2.1"
hydroflow_plus = "0.9.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.74", features = ["full", "printing", "extra-traits", "visit-mut", "visit"] }

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3